--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,20 @@
   "name": "Voice2Sheet AI Transcription",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/5968/5968517.png",
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#4f46e5",
   "background_color": "#f8fafc"
