--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,19 @@
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968517.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968517.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#4f46e5",
-  "background_color": "#ffffff",
+  "background_color": "#f8fafc",
   "scope": "/"
 }
