--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 
 {
-  "short_name": "V2S Local",
-  "name": "Voice2Sheet Local AI",
+  "short_name": "VoiceLog",
+  "name": "VoiceLog IA Personal",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968517.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "https://cdn-icons-png.flaticon.com/512/5968/5968517.png",
@@ -16,9 +16,9 @@
       "purpose": "any"
     }
   ],
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#4f46e5",
-  "background_color": "#f8fafc",
-  "scope": "/"
+  "background_color": "#ffffff",
+  "orientation": "portrait"
 }
